# mtprng

./: .gitignore  CMakeLists.txt  example_prog.f90  gaussian.f90  mtprng.f90
cmake/: version.cmake
test/: test_mtprng.f90
